// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SystemMessage error basic 1`] = `
<div
  className="jsx-145905035"
>
  <span
    className="jsx-3356670990"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage error with icon 1`] = `
<div
  className="jsx-3997988623"
>
  <span
    className="jsx-2399753088"
  >
    <svg
      fill="currentColor"
      height="24px"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": "#d21c1c",
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 24 24"
      width="24px"
    >
      <path
        d="M12 17.25a1.25 1.25 0 1 1 0-2.5 1.25 1.25 0 0 1 0 2.5zM11 6h2v7h-2V6zm1-4C6.486 2 2 6.486 2 12c0 5.515 4.486 10 10 10s10-4.485 10-10c0-5.514-4.486-10-10-10z"
      />
    </svg>
  </span>
  <span
    className="jsx-3356670990"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage error with title 1`] = `
<div
  className="jsx-145905035"
>
  <h4
    className="jsx-3861500783"
  >
    Title
  </h4>
  <span
    className="jsx-3356670990"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage error with title and  icon 1`] = `
<div
  className="jsx-3997988623"
>
  <span
    className="jsx-2399753088"
  >
    <svg
      fill="currentColor"
      height="24px"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": "#d21c1c",
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 24 24"
      width="24px"
    >
      <path
        d="M12 17.25a1.25 1.25 0 1 1 0-2.5 1.25 1.25 0 0 1 0 2.5zM11 6h2v7h-2V6zm1-4C6.486 2 2 6.486 2 12c0 5.515 4.486 10 10 10s10-4.485 10-10c0-5.514-4.486-10-10-10z"
      />
    </svg>
  </span>
  <h4
    className="jsx-3861500783"
  >
    Title
  </h4>
  <span
    className="jsx-3356670990"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage info basic 1`] = `
<div
  className="jsx-1685984105"
>
  <span
    className="jsx-2657584504"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage info with icon 1`] = `
<div
  className="jsx-1685984105"
>
  <span
    className="jsx-2657584504"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage info with title and  icon 1`] = `
<div
  className="jsx-1685984105"
>
  <h4
    className="jsx-3436964697"
  >
    Title
  </h4>
  <span
    className="jsx-2657584504"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage success basic 1`] = `
<div
  className="jsx-2687967222"
>
  <span
    className="jsx-3915919481"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage success with icon 1`] = `
<div
  className="jsx-250642034"
>
  <span
    className="jsx-2399753088"
  >
    <svg
      fill="currentColor"
      height="24px"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": "#127f22",
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 24 24"
      width="24px"
    >
      <path
        d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
      />
    </svg>
  </span>
  <span
    className="jsx-3915919481"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage success with title and  icon 1`] = `
<div
  className="jsx-250642034"
>
  <span
    className="jsx-2399753088"
  >
    <svg
      fill="currentColor"
      height="24px"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": "#127f22",
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 24 24"
      width="24px"
    >
      <path
        d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
      />
    </svg>
  </span>
  <h4
    className="jsx-1426517912"
  >
    Title
  </h4>
  <span
    className="jsx-3915919481"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage warning basic 1`] = `
<div
  className="jsx-2591358329"
>
  <span
    className="jsx-1932761937"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage warning with icon 1`] = `
<div
  className="jsx-2787974653"
>
  <span
    className="jsx-2399753088"
  >
    <svg
      fill="currentColor"
      height="24px"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": "#f9971e",
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 24 24"
      width="24px"
    >
      <path
        d="M12 19.25a1.25 1.25 0 1 1 0-2.5 1.25 1.25 0 0 1 0 2.5zM11 10h2v6h-2v-6zm10.895 10.553l-9-18c-.339-.678-1.451-.678-1.79 0l-9 18c-.154.31-.138.678.044.973.183.294.504.474.851.474h18c.347 0 .668-.18.851-.474.182-.295.198-.663.044-.973z"
      />
    </svg>
  </span>
  <span
    className="jsx-1932761937"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage warning with title and  icon 1`] = `
<div
  className="jsx-2787974653"
>
  <span
    className="jsx-2399753088"
  >
    <svg
      fill="currentColor"
      height="24px"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": "#f9971e",
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 24 24"
      width="24px"
    >
      <path
        d="M12 19.25a1.25 1.25 0 1 1 0-2.5 1.25 1.25 0 0 1 0 2.5zM11 10h2v6h-2v-6zm10.895 10.553l-9-18c-.339-.678-1.451-.678-1.79 0l-9 18c-.154.31-.138.678.044.973.183.294.504.474.851.474h18c.347 0 .668-.18.851-.474.182-.295.198-.663.044-.973z"
      />
    </svg>
  </span>
  <h4
    className="jsx-384181360"
  >
    Title
  </h4>
  <span
    className="jsx-1932761937"
  >
    Type your message here
  </span>
</div>
`;
